# cv-systems-portfolio

./: .gitignore  LICENSE  README.md
Project1_OpenCVEffectsEngine/: .gitignore
Project1_OpenCVEffectsEngine/include/: depthEstimator.h  filters.h
Project1_OpenCVEffectsEngine/src/: #main.cpp#  depthEstimator.cpp  filters.cpp  imgDisplay.cpp  main.cpp  vidDisplay.cpp
Project2_ImageRetrieval/: .gitignore  CMakeLists.txt  README.md
Project2_ImageRetrieval/include/: advanced_texture.h  feature_extraction.h  image_analysis.h  object_detection.h
Project2_ImageRetrieval/src/: adaptive_matching.cpp  advanced_texture_matching.cpp  baseline_matching.cpp  csv_utils.cpp  feature_extraction.cpp  query_refinement_matching.cpp  saliency_features.cpp  texture_color.cpp
project2-image-retrieval/extensions/gui/: web_gui.py
project2-image-retrieval/include/: csv_utils.h  distance_metrics.h  query_refinement.h  saliency_features.h
project2-image-retrieval/scripts/: create_comparison.py  visualize_results.py
project2-image-retrieval/src/: advanced_texture.cpp  custom_design.cpp  distance_metrics.cpp  dnn_matching.cpp  histogram_matching.cpp  image_analysis.cpp  mobilenet_detector.cpp  multi_histogram.cpp  query_refinement.cpp  saliency_matching.cpp
